syntax = "proto3";

option csharp_namespace = "Dynamo.Contracts";

package employee;

service Employee {
	rpc CreateEmployee (CreateEmployeeRequest) returns (EmployeeCreatedReply);
	rpc GetEmployee (GetEmployeeRequest) returns (EmployeeReply);
}

message CreateEmployeeRequest {
	string first_name = 1;
}

message GetEmployeeRequest {
	string id = 1;
}

message EmployeeCreatedReply {
	string id = 1;
}

message EmployeeReply {
	string id = 1;
	string first_name = 2;
}
